style.css
/* ... */
blockquote {
  color: #00215E;
  padding: 0 3em;
  font: 18px/1.1 "Baskerville", "Times";
  margin-top: -10px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Helvetica Neue", sans-serif;
  color: #00215e;
  font-weight: 500;
  font-style: normal;
  padding: 0;
  text-align: center;
}
@media screen and (max-width: 640px) {
  h1, h2, h3, h4, h5, h6 {
    line-height: 1.4;
  }
}

h1 {
  font-size: 30px;
  font-style: normal;
  font-weight: 600;
}
h1 a {
  color: inherit;
}

h2 {
  font-size: 24px;
  padding-top: 15px;
  border-bottom: 1px solid #0082fc;
}

h3 {
  font-size: 21px;
  border-bottom: 1px solid #0082fc;
}

h4 {
  font-size: 21px;
  margin: 1em 0 15px;
}

h5 {
  font-size: 18px;
}

p {
  margin-top: 15px;
  margin-bottom: 15px;
}

a {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: #0082fc;
  text-decoration-thickness: 1.25px;
  text-underline-offset: 2px;
  cursor: pointer;
}
a:hover, a:active {
  color: #0082fc;
  text-decoration-color: #0082fc;
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: #00215E;
}

::-moz-selection {
  color: #00215E;
  background: #fcdbd9;
}

::selection {
  color: #00215E;
  background: #fcdbd9;
}

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

input[type=number] {
    border: 0;
    border-bottom: 2px solid #0082fc;
    background: #d8ecfc;
    font: 20px/1.6 "Baskerville", "Times";
    width: 10%;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/
.masthead {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  width: 100%;
  padding-bottom: 40px;
  flex-wrap: nowrap;
  margin-top: 20px;
}
@media screen and (max-width: 640px) {
  .masthead {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
}
.masthead .site-name {
  font-family: "Helvetica Neue", sans-serif;
  font-style: normal;
  font-size: 30px;
  font-weight: 300;
  color: #00215E;
  cursor: pointer;
  background-color: #ebf6ff;
  border-bottom: 0px solid #0082fc;
  border-top: 0px solid #0082fc;
  letter-spacing: 0px;
}
@media screen and (max-width: 640px) {
  .masthead .site-name {
    font-size: 24px;
    /* Adjust font size for smaller screens */
    width: 100%;
    text-align: center;
  }
}
.masthead .site-name a {
  text-decoration: underline;
  text-decoration-color: #0082fc;
  text-decoration-thickness: 2px;
}
.masthead .site-name::before {
  content: none;
}
.masthead nav {
  font-family: "Helvetica Neue", sans-serif;
  font-size: 18px;
}
@media screen and (max-width: 640px) {
  .masthead nav {
    font-size: 16px;
    margin: 0 12px;
  }
}
.masthead nav a {
  margin-left: 5px;
  margin-right: 5px;
  font-weight: 300;
  letter-spacing: 1px;
}
@media screen and (max-width: 640px) {
  .masthead nav a {
    margin: 0 15px;
  }
}
.masthead nav a.active {
  color: #0082fc;
  text-decoration-color: #0082fc;
}

.education {
  padding: 20px 0;
}
.education .institution {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  /* Aligns items at the top */
  margin-bottom: 20px;
}
.education .institution .details {
  width: 80%;
}
.education .institution h5 {
  text-align: left;
  font-weight: 600;
  font-style: normal;
  font-size: 0.9em;
  margin-bottom: 0.0em;
}
.education .institution p {
  font-size: 0.9em;
  margin: 0;
}
.education .institution .date {
  width: 20%;
  text-align: right;
  font-size: 0.85em;
  white-space: nowrap;
  font-style: normal;
}

.index-background-image-container {
  background-image: url("/images/headshot.png");
  /* Use the image from your front matter */
  background-size: cover;
  /* Cover the entire area */
  background-position: 50% 35%;
  /* Center the image */
  height: 200px;
  width: 200px;
  padding: 20px;
  box-sizing: border-box;
  border-radius: 30px;
  margin:auto;
}

.research-background-image-container {
  background-image: url("/images/teton_dam_flood_newdale.jpg");
  /* Use the image from your front matter */
  background-size: cover;
  /* Cover the entire area */
  background-position: 50% 35%;
  /* Center the image */
  height: 400px;
  width: 100%;
  padding: 20px;
  box-sizing: border-box;
  border-radius: 30px;
}

.project-table {
  table-layout: fixed;
  margin: 30px auto 0;
  /* Center the table and add 20px margin on top */
  border-collapse: collapse;
  /* Collapse borders */
  width: 100%;
  /* Ensure the table spans the full width of the container */
}

.project-table td {
  padding: 10px;
  text-align: left;
  vertical-align: middle;
}

.project-table td:first-child {
  width: 40%;
  /* First column takes up 30% of the table's width */
}

.project-table td:last-child {
  width: 60%;
  /* Second column takes up 70% of the table's width */
}

.video-container {
  width: 100%;
  /* Ensure the video container fills the table cell */
  max-width: 400px;
  /* Optionally set a max width for the video */
}

.project-table h5 {
  text-align: left;
}

.project-table p {
  font: 18px/1.5 "Baskerville", "Times";
}
/* ... */

